--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="groomservice.dataprovence"
+    package="bma.groomservice.dataprovence"
     android:versionCode="1"
     android:versionName="1.0">
 
